--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,72 +1,123 @@
+html {
+  background-image: linear-gradient(
+      rgba(0, 0, 255, 0.5),
+      rgba(255, 255, 0, 0.5)
+    ),
+    url("../src/assets/dog1.jpeg");
+}
 .app {
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+
+  label {
+    background-color: #ddddddc8;
+    border-radius: 5px;
+    padding: 4px;
+  }
+  .form-card {
+    border: solid gold;
+    font-family: cursive;
+    color: rgb(15, 15, 14);
+    margin: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px gray;
+    min-width: 310px;
     align-items: center;
-    background-color: #d3d3d3;
-    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    background-repeat: repeat;
+    background-size: 200px;
+    background-image: linear-gradient(
+        rgba(0, 0, 255, 0.358),
+        rgba(255, 255, 0, 0.293)
+      ),
+      url("../src/assets/dog1.jpeg");
 
-    .form-card {
-        background-color: #fff;
-        margin: 10px;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 5px 5px 5px gray;
-
-        input {
-            display: block;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-        }
-        
-        .error {
-            color: #ff3d3d;
-            font-size: 12px;
-            padding: 0;
-            margin: 0;
-        }
-
-        button {
-            padding: 10px 20px;
-            margin-top: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: blue;
-            color: white;
-            transition: 0.3s all ease-in-out;
-            
-            &:hover {
-                background-color: aqua;
-                color: black;
-                cursor: pointer;
-            }
-        }
+    input {
+      display: block;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ddd;
     }
 
-    .section {
-        width: 600px;
-        display: flex;
-        flex-flow: wrap;
-
-        .registration-card {
-            background-color: white;
-            margin: 10px;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 5px 5px 5px gray;
-            min-width: 200px;
-            max-width: max-content;
-    
-            h2 {
-                color: blue
-            }
-    
-            p, h3, h4 {
-                color: #333;
-            }
-        }
+    .error-message {
+      color: #ff3d3d;
+      font-size: 12px;
+      margin-top: 0;
+      margin-bottom: 5px;
+      background-color: black;
+      border-radius: 5px;
     }
 
+    select {
+      width: 184px;
+      height: 38px;
+      border-radius: 5px;
+      border: 1px solid #cdbfbf;
+      margin-bottom: 10px;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: rgb(238, 163, 211);
+      box-shadow:
+        inset 6px 6px 20px -1px #ce6f8c,
+        inset -6px -6px 20px -1px #ff97be;
+      color: white;
+      font-family: cursive;
+      transition: 0.3s all ease-in-out;
+
+      &:hover {
+        background-color: rgb(216, 216, 67);
+        box-shadow:
+          inset 6px 6px 20px -1px #c5ce6f,
+          inset -6px -6px 20px -1px #e7ff97;
+        color: black;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .section {
+    width: 600px;
+    display: flex;
+    flex-flow: wrap;
+
+    .registration-card {
+      background-color: white;
+      margin: 10px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px gray;
+      min-width: 200px;
+      max-width: max-content;
+      background-image: linear-gradient(
+        rgba(0, 0, 255, 0.5),
+        rgba(255, 255, 0, 0.5)
+      );
+      background-repeat: repeat;
+      background-size: 200px;
+
+      h2 {
+        color: blue;
+      }
+
+      p,
+      h3,
+      h4 {
+        color: #333;
+      }
+    }
+  }
 }
